# Wasmcloud-pattern-classifier

./: .gitignore  DESIGN.md  wadm.yaml
.github/workflows/: ci.yml  release.yml
component/: Cargo.toml  wasmcloud.toml
component/src/: lib.rs
component/wit/: world.wit
dashboard/: README.md  index.html
tests/: INTEGRATION_TEST_REPORT.md  README.md  run_integration_test.sh
